# judicialai

./: .env  .env.example  .gitignore  README.md  REFLECTION.md  docker-compose.yml  launch.bat  launch.ps1
architecture draft/: claude arcitecture draft.txt
backend/: Cargo.toml  Dockerfile
backend/src/: evals.rs  extractor.rs  lib.rs  llm.rs  main.rs  retrieval.rs  types.rs
backend/src/agents/: consistency.rs  graph.rs  memo.rs  mod.rs  propositions.rs  validator.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  keystore.ts  matters.ts  store.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/demo-matters/rivera-v-harmon/: matter.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ApiKeySettings.tsx  ApprovalStage.tsx  ArgumentDAG.tsx  CitationReviewPanel.tsx  DetailPanel.tsx  DocumentViewer.tsx  MatterHeader.tsx  MatterSidebar.tsx  ModeToggle.tsx  ResolutionChecklist.tsx  VerdictBadge.tsx
